--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pex-materials",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Additional glsl materials for the pex library",
   "homepage": "https://github.com/vorg/pex-materials",
   "keywords": [
@@ -21,7 +21,7 @@
     "pex-color": "0.0.1"
   },
   "dependencies": {
-    "extend": "1.2.1"
+    "merge": "1.1.3"
   },
   "repository": {
     "type": "git",
