--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "pex-color": "0.0.1"
   },
   "dependencies": {
-    "merge": "1.1.3"
+    "merge": "~1.2.0"
   },
   "repository": {
     "type": "git",
